--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+git (1:2.15.0~rc0-1) unstable; urgency=low
+
+  * new upstream release candidate (see RelNotes/2.15.0.txt).
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 09 Oct 2017 10:13:35 -0700
+
 git (1:2.14.2-1) unstable; urgency=high
 
   * new upstream point release (see RelNotes/2.14.1.txt).  Among other
