debian: remove transitional git-core package
It has been obsolete for a while now.

Fixes: https://bugs.debian.org/878189
Requested-by: Holger Levsen <holger@layer-acht.org>
Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+git (1:2.15.0~rc0-1.1) unstable; urgency=low
+
+  * remove transitional git-core package (thx Holger Levsen;
+    closes: #878189).
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Tue, 10 Oct 2017 13:35:38 -0700
+
 git (1:2.15.0~rc0-1) unstable; urgency=low
 
   * new upstream release candidate (see RelNotes/2.15.0.txt).
