--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+git (1:2.15.0-1.1) unstable; urgency=low
+
+  * debian/control: Standards-Version: 4.1.1.1.
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Wed, 29 Nov 2017 13:24:55 -0800
+
 git (1:2.15.0-1) unstable; urgency=low
 
   * new upstream release (see RelNotes/2.15.0.txt).
