debian/control: Standards-Version: 4.1.2.0
A minor policy update.  No changes needed.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-git (1:2.15.1-1.1) unstable; urgency=low
+git (1:2.15.1-2) unstable; urgency=low
 
   * gitweb: Recommends: 'apache2 (>= 2.4.6-4~) | lynx | httpd' instead
     of ... | lynx-cur | ... (thx Łukasz Zemczak; see #490265).
+  * debian/control: Standards-Version: 4.1.2.0.
 
- -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 18 Dec 2017 09:34:22 -0800
+ -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 18 Dec 2017 09:45:31 -0800
 
 git (1:2.15.1-1) unstable; urgency=low
 
