debian/rules: remove remnants of git-core package
The Git Debian package fails to build with dpkg-buildpackage twice in
a row.  The first build succeeds, but the second one fails:

   debian/rules override_dh_installdocs-indep
  make[1]: Entering directory '/build/git-2.15.1+next.20171214'
  install -d -m0755 '/build/git-2.15.1+next.20171214/debian/git'-core/usr/share/doc
  ln -s git '/build/git-2.15.1+next.20171214/debian/git'-core/usr/share/doc/git-core
  ln: failed to create symbolic link '/build/git-2.15.1+next.20171214/debian/git-core/usr/share/doc/git-core': File exists
  debian/rules:154: recipe for target 'override_dh_installdocs-indep' failed

That's because the git-core package is no longer being built, so
dh_clean does not clean up the debian/git-core/ tree, but the rules to
generate that tree remain as lingering cruft.

These rules should have been removed in 6e56d199 (debian: remove
transitional git-core package, 2017-10-10).  Finish up by removing
them now.

Fixes: https://bugs.debian.org/884890
Reported-by: Andreas Beckmann <anbe@debian.org>
Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+git (1:2.15.1-3) unstable; urgency=low
+
+  * debian/rules: remove remnants of git-core package that prevented
+    building twice in a row (thx Andreas Beckmann; closes: #884890).
+
+ -- Jonathan Nieder <jrnieder@gmail.com>  Fri, 22 Dec 2017 17:13:42 -0800
+
 git (1:2.15.1-2) unstable; urgency=low
 
   * gitweb: Recommends: 'apache2 (>= 2.4.6-4~) | lynx | httpd' instead
