debian/rules: exclude .gitattributes from contrib installation
Noticed by Lintian:

 package-contains-vcs-control-file

 The package contains a VCS control file such as .(cvs|git|hg)ignore.
 This file is generally useless in an installed package and was
 probably installed by accident.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ git (1:2.16.1-0.1) unstable; urgency=low
     https://crbug.com/git/7).
   * debian/patches/git-gui-Sort-entries-in-optimized-tclIndex.diff:
     remove; applied upstream.
+  * debian/rules: do not install contrib/**/.gitattributes to
+    /usr/share/doc (thx Paul Wise and Bastien Roucaries for suggesting
+    it through lintian).
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Mon, 05 Feb 2018 11:40:40 -0800
 
